--- a/android/assets/jsons/Translations/Buildings.json
+++ b/android/assets/jsons/Translations/Buildings.json
@@ -1436,7 +1436,7 @@
 		French:"+5% de production pour chaque routes commerciales connectées à une Cité état"
 		Polish:"+5% do produkcji za każdy szlak handlowy z państwem-miastem"
 		Simplified_Chinese:"每条通往城邦的贸易路线+5%产能"
-		Traditional_Chinese:"每調通往城邦的貿易路線+5%產能"
+		Traditional_Chinese:"每條通往城邦的貿易路線+5%產能"
 		Russian:"+5% Производство за каждый торговый маршрут с городом-государством"
 		Czech:"+5% produkce pro každou obchodní stezku s hlavním městem říše"
 		German:"+5% Produktion für jeden Handelsweg mit einem Stadtstaat innerhalb des Imperiums"
@@ -1895,8 +1895,8 @@
 		German:"Neue Sozialpolitiken erfordern 10% weniger Kultur"
 		Dutch:"Aanschaffingskosten nieuwe sociaal beleiden verlaagd met 10%"
 		Spanish:"Coste de cultura para adoptar nuevas políticas se reduce 10%"
-		Simplified_Chinese:"推行新的社会政策所需的文化点数-10%"
-		Traditional_Chinese:"推行新的社會政策所需的文化點數-10%"
+		Simplified_Chinese:"推行新的社会政策所需的文化-10%"
+		Traditional_Chinese:"推行新的社會政策所需的文化-10%"
 		Portuguese:"Custo cultural de adotar novas políticas reduzido em 10%"
 		Polish:"Wdrożenie nowych ustrojów społecznych zmniejszone o 10% kultury"
 		Czech:"Počet Kulturních bodů na získání nové sociální politiky se sníží o 10%"
